[reminders] Fix spacing between main nav and upcoming reminders.

--- a/apps/shared/static/css/medley.css
+++ b/apps/shared/static/css/medley.css
@@ -704,10 +704,6 @@ TEXTAREA {
     #main-toolbar FIELDSET {
         margin-top: 0;
     }
-
-    MAIN {
-        margin-top: 1.5em;
-    }
 }
 
 /* Large devices */
